src/styles/article.css
.article-content {
  @apply max-w-none;
  @apply text-xl;
  @apply -mt-5;

  /* Codeblocks */
  & code {
    @apply whitespace-pre-wrap;

    & > .line {
      @apply font-mono;
    }
  }

  & pre {
    @apply border border-ctp-mantle;
  }

  [data-remark-code-title] {
    @apply rounded-t-lg border border-ctp-crust bg-ctp-crust px-5 py-2 font-mono text-sm dark:bg-ctp-mantle;

    & + pre {
      @apply m-0 rounded-t-none border-t-0;
    }
  }

  /* Heading links */
  & :is(h1, h2, h3, h4, h5, h6) {
    @apply gap-1;
    @apply flex;

    & a {
      @apply transition delay-[1ms] ease-in;
      @apply opacity-0;
      @apply pl-1;

      &:hover {
        @apply font-bold;
        @apply transition ease-out hover:opacity-60;
      }
    }

    &:hover a {
      @apply opacity-100;
    }
  }
}

.external-icon {
  @apply inline-flex;

  svg {
    @apply pl-1 pt-1.5;
  }
}

